--- a/forexglobal/client/login.html
+++ b/forexglobal/client/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Careers - Forex24 Global</title>
+  <title>Login - Forex24 Global</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -31,12 +31,12 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../client/real/step-1.html">Real</a></li>
-              <li><a href="../client/demo.html">Demo</a></li>
+              <li><a href="real/step-1.html">Real</a></li>
+              <li><a>Demo</a></li>
               <li><a href="../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
           </li>
-          <li><a href="../client/login.html">Log in</a></li>
+          <li><a>Log in</a></li>
           <li>
             <select class="header__language">
               <option>En</option>
@@ -51,12 +51,12 @@
             <a class="nav__link" onclick="about()">About</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
-                <li><a href="security-of-funds.html">Security of Funds</a></li>
-                <li><a href="stp-broker.html">STP Broker</a></li>
-                <li><a href="legal-documents.html">Legal Documents</a></li>
-                <li><a href="kids.html">KIDs</a></li>
-                <li><a class="nav__active">Careers</a></li>
+                <li><a href="../about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
+                <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
+                <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+                <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
+                <li><a href="../about-us/kids.html">KIDs</a></li>
+                <li><a href="../about-us/careers.html">Careers</a></li>
               </ul>
             </div>
           </li>
@@ -100,21 +100,24 @@
       </nav>
     </div>
   </header>
-  <section class="inner">
+  <section class="client">
     <div class="container">
-      <h1 class="inner__name">Careers</h1>
-      <div class="inner__icon  inner__icon--careers"></div>
-      <div class="inner__text">
-        <p>We offer a challenging and rewarding working environment, where every employee counts and can make a difference.</p>
-        <p>We believe in the value of our people and their input, the benefits of teamwork and the sense of belonging to our organisation.</p>
-        <p>We are passionate about developing our people and provide long-term career paths.</p>
-        <p>We are governed by the European Markets in Financial Instruments Directive (MiFID), fully supporting its purpose to provide unified investment services regulatory management in the European Economic Area (EEA), for fair practice, increasing efficiency, competition, consumer and employee protection.</p>
-        <p>We abide by the European Labour Law and the requirements for best employment practices as well as providing high levels of worker satisfaction.</p>
-        <div class="inner__links  inner__links--careers">
-          <a class="inner__download" href="../img/pdf/Customer-Support-French-Italian-German-Portuguese-Spanish-Swedish.pdf" target="_blank">Customer Support (French, Italian, German, Portuguese, Spanish, Swedish)</a>
-          <a class="inner__download" href="../img/pdf/Social-Media-Manager-Job-Description.pdf" target="_blank">Social Media Manager</a>
+      <h1 class="client__name">Login</h1>
+      <h2 class="client__subname">Sign in to Forex24 Client Area</h2>
+      <form class="client__form  client__form--login" action="" method="post">
+        <div class="client__flex  client__flex--login">
+          <input type="email" name="Email" placeholder="Email" required>
+          <input type="password" name="Password" placeholder="Password" required>
         </div>
-      </div>
+        <div class="client__flex  client__flex--button">
+          <a class="client__forgot" href="#">Forgot password?</a>
+          <button class="client__next" type="submit" name="Submit">Sign In</button>
+        </div>
+      </form>
+      <!-- <p class="client__warning">
+        <b>Risk Warning:</b>
+        Our products are traded on margin and carry a high level of risk and it is possible to lose all your capital. These products may not be suitable for everyone and you should ensure that you understand the risks involved.
+      </p> -->
     </div>
   </section>
   <section class="payment  payment--inner">
@@ -148,12 +151,12 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>About</b></li>
           <li><hr></li>
-          <li><a href="licenses-and-regulations.html">Licenses & Regulations</a></li>
-          <li><a href="security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="stp-broker.html">STP Broker</a></li>
-          <li><a href="legal-documents.html">Legal Documents</a></li>
-          <li><a href="kids.html">KIDs</a></li>
-          <li><a class="footer__active">Careers</a></li>
+          <li><a href="../about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
+          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+          <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
+          <li><a href="../about-us/kids.html">KIDs</a></li>
+          <li><a href="../about-us/careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
@@ -187,7 +190,7 @@
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
       <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
-      <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
+      <p class="footer__text">The Company is also cliented with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
   <script src="../js/main.min.js" async></script>
