--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -31,12 +31,12 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../register/real/step-1.html">Real</a></li>
-              <li><a href="../register/demo.html">Demo</a></li>
+              <li><a href="../client/real/step-1.html">Real</a></li>
+              <li><a href="../client/demo.html">Demo</a></li>
               <li><a href="../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
           </li>
-          <li><a href="https://client.forex24.com/en/members/login">Log in</a></li>
+          <li><a href="../client/login.html">Log in</a></li>
           <li>
             <select class="header__language">
               <option>En</option>
@@ -108,7 +108,7 @@
         <div class="account-types__box  account-types__box--mini">
           <h2>Mini Bronze</h2>
           <p>Basic Trading For Beginners</p>
-          <b>$100</b>
+          <!-- <b>$100</b> -->
           <hr>
           <ul>
             <li>Min First Deposit: <span>$/£/€/100</span></li>
@@ -127,12 +127,12 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="../register/real/step-1.html">Create account</a>
+          <a href="../client/real/step-1.html">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--silver">
           <h2>Classic Silver</h2>
           <p>Trading For Experienced Investors</p>
-          <b>$500</b>
+          <!-- <b>$500</b> -->
           <hr>
           <ul>
             <li>Min First Deposit: <span>$/£/€/500</span></li>
@@ -151,12 +151,12 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="../register/real/step-1.html">Create account</a>
+          <a href="../client/real/step-1.html">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--gold">
           <h2>Premium Gold</h2>
           <p>Advanced Trading For Serious Investors</p>
-          <b>$1000</b>
+          <!-- <b>$1000</b> -->
           <hr>
           <ul>
             <li>Min First Deposit: <span>$/£/€/1,000</span></li>
@@ -175,12 +175,12 @@
             <li>Access to Breaking News & Market Research</li>
             <li>Account Executive Team Available 24/5</li>
           </ul>
-          <a href="../register/real/step-1.html">Create account</a>
+          <a href="../client/real/step-1.html">Create account</a>
         </div>
         <div class="account-types__box  account-types__box--zulu">
           <h2>ZuluTrade</h2>
           <p>Social & Copytrading</p>
-          <b>$100</b>
+          <!-- <b>$100</b> -->
           <hr>
           <ul>
             <li>Min First Deposit: <span>$/£/€/100</span></li>
@@ -274,7 +274,7 @@
         <hr class="footer__hr">
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
-      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
+      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
