--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -31,12 +31,12 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../../register/real/step-1.html">Real</a></li>
-              <li><a href="../../register/demo.html">Demo</a></li>
+              <li><a href="../../client/real/step-1.html">Real</a></li>
+              <li><a href="../../client/demo.html">Demo</a></li>
               <li><a>ZuluTrade</a></li>
             </ul>
           </li>
-          <li><a href="https://client.forex24.com/en/members/login">Log in</a></li>
+          <li><a href="../../client/login.html">Log in</a></li>
           <li>
             <select class="header__language">
               <option>En</option>
@@ -116,7 +116,7 @@
         <p class="inner__sub">ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders</p>
         <p class="inner__text">A trader can execute trades manually or allocate a desirable amount to follow top performing traders, therefore diversifying the investment. The trader can also set risk management parameters in advance of any trading activity, in order to shield against any volatile trading strategy.</p>
         <p class="inner__text">ZuluTrade users are able to connect to the platform through the website and the available mobile applications. Innovative Mobile Apps for all major mobile platforms (iPhone, iPad, Android, Blackberry, and Kindle Fire) offer full functionality and the ability to be in control of your account anywhere, anytime.</p>
-        <a class="zulu__start" href="#">Start Trading</a>
+        <a class="zulu__start" href="../../client/real/step-1.html">Start Trading</a>
         <hr>
         <div class="zulu__flex  zulu__flex--key">
           <div class="zulu__mockup"></div>
@@ -1849,11 +1849,11 @@
           <div class="container">
             <h2>Try It Now</h2>
             <div class="inner__links">
-              <a class="inner__real" href="../../register/real/step-1.html">
+              <a class="inner__real" href="../../client/real/step-1.html">
                 Real account<br>
                 <span>start live trading</span>
               </a>
-              <a class="inner__demo" href="../../register/demo.html">
+              <a class="inner__demo" href="../../client/demo.html">
                 Demo account<br>
                 <span>start praccticing for free</span>
               </a>
@@ -1932,7 +1932,7 @@
         <hr class="footer__hr">
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
-      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
+      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
