--- a/forexglobal/trading/product-specification.html
+++ b/forexglobal/trading/product-specification.html
@@ -31,12 +31,12 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../register/real/step-1.html">Real</a></li>
-              <li><a href="../register/demo.html">Demo</a></li>
+              <li><a href="../client/real/step-1.html">Real</a></li>
+              <li><a href="../client/demo.html">Demo</a></li>
               <li><a href="../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
           </li>
-          <li><a href="https://client.forex24.com/en/members/login">Log in</a></li>
+          <li><a href="../client/login.html">Log in</a></li>
           <li>
             <select class="header__language">
               <option>En</option>
@@ -112,16 +112,18 @@
         <button class="tab__button  tab__button--equities" onclick="openTab(event, 'Equities')">Equities</button>
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
-        <h3>Forex</h3>
-        <p>Foreign exchange or Forex is one of the largest and most liquid markets with over 5 trillion dollars traded daily. A trader can trade currencies against each other and based on the changing values of currencies over time he can make a profit or a loss. Exchange rates are defined by the market forces of supply and demand and are affected by geopolitical and economic events around the globe.</p>
-        <b>With Forex24:</b>
-        <ul>
-          <li>You can trade 68+ currency pairs: majors, minors and exotics</li>
-          <li>You get direct access to the forex market 24 hours a day, 5 days a week</li>
-          <li>Leverage up to 400:1</li>
-          <li>Low spreads and No re-quotes</li>
-          <li>No hidden fees</li>
-        </ul>
+        <div class="tab__header">
+          <h3>Forex</h3>
+          <p>Foreign exchange or Forex is one of the largest and most liquid markets with over 5 trillion dollars traded daily. A trader can trade currencies against each other and based on the changing values of currencies over time he can make a profit or a loss. Exchange rates are defined by the market forces of supply and demand and are affected by geopolitical and economic events around the globe.</p>
+          <b>With Forex24:</b>
+          <ul>
+            <li>You can trade 68+ currency pairs: majors, minors and exotics</li>
+            <li>You get direct access to the forex market 24 hours a day, 5 days a week</li>
+            <li>Leverage up to 400:1</li>
+            <li>Low spreads and No re-quotes</li>
+            <li>No hidden fees</li>
+          </ul>
+        </div>
         <table class="tab__table">
         	<tr>
         		<th>Symbols</th>
@@ -2189,7 +2191,7 @@
         <hr class="footer__hr">
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
-      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
+      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
