--- a/forexglobal/client/real/step-1.html
+++ b/forexglobal/client/real/step-1.html
@@ -4,39 +4,39 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
-  <title>Register Demo - Forex24 Global</title>
-  <link rel="stylesheet" href="../css/style.min.css">
+  <title>Register Real Step 1 - Forex24 Global</title>
+  <link rel="stylesheet" href="../../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#2f2861">
-  <link rel="manifest" href="../site.webmanifest">
-  <meta name="msapplication-config" content="../browserconfig.xml">
-  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../../img/favicon/safari-pinned-tab.svg" color="#2f2861">
+  <link rel="manifest" href="../../site.webmanifest">
+  <meta name="msapplication-config" content="../../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../../img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#5a21ed">
 </head>
 <body>
   <header class="header--inner  header--scroll">
     <div class="header__container">
       <div class="header__flex">
-        <a class="header__logo" href="../index.html">
-          <img src="../img/logo.svg" alt="Forex24 Global">
+        <a class="header__logo" href="../../index.html">
+          <img src="../../img/logo.svg" alt="Forex24 Global">
         </a>
         <button class="header__toggle">Open Menu</button>
         <ul class="header__user  header__user--closed">
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="real/step-1.html">Real</a></li>
-              <li><a>Demo</a></li>
-              <li><a href="../trading/platforms/zulutrade.html">ZuluTrade</a></li>
+              <li><a>Real</a></li>
+              <li><a href="../../client/demo.html">Demo</a></li>
+              <li><a href="../../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
           </li>
-          <li><a href="https://client.forex24.com/en/members/login">Log in</a></li>
+          <li><a href="../login.html">Log in</a></li>
           <li>
             <select class="header__language">
               <option>En</option>
@@ -51,12 +51,12 @@
             <a class="nav__link" onclick="about()">About</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
-                <li><a href="../about-us/security-of-funds.html">Security of Funds</a></li>
-                <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
-                <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
-                <li><a href="../about-us/kids.html">KIDs</a></li>
-                <li><a href="../about-us/careers.html">Careers</a></li>
+                <li><a href="../../about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
+                <li><a href="../../about-us/security-of-funds.html">Security of Funds</a></li>
+                <li><a href="../../about-us/stp-broker.html">STP Broker</a></li>
+                <li><a href="../../about-us/legal-documents.html">Legal Documents</a></li>
+                <li><a href="../../about-us/kids.html">KIDs</a></li>
+                <li><a href="../../about-us/careers.html">Careers</a></li>
               </ul>
             </div>
           </li>
@@ -64,13 +64,13 @@
             <a class="nav__link" onclick="trading()">Trading</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../trading/account-types.html">Account Types</a></li>
-                <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
-                <li><a href="../trading/product-specification.html">Product Specification</a></li>
-                <!-- <li><a href="../trading/trading-specification.html">Trading Specification</a></li> -->
-                <li><a href="../trading/platforms.html">Platforms</a></li>
-                <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-                <li><a href="../trading/announcements.html">Announcements</a></li>
+                <li><a href="../../trading/account-types.html">Account Types</a></li>
+                <li><a href="../../trading/account-comparison.html">Account Comparison</a></li>
+                <li><a href="../../trading/product-specification.html">Product Specification</a></li>
+                <!-- <li><a href="../../trading/trading-specification.html">Trading Specification</a></li> -->
+                <li><a href="../../trading/platforms.html">Platforms</a></li>
+                <li><a href="../../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+                <li><a href="../../trading/announcements.html">Announcements</a></li>
               </ul>
             </div>
           </li>
@@ -78,8 +78,8 @@
             <a class="nav__link" onclick="resources()">Resources</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../resources/glossary.html">Glossary</a></li>
-                <li><a href="../resources/economic-calendar.html">Economic calendar</a></li>
+                <li><a href="../../resources/glossary.html">Glossary</a></li>
+                <li><a href="../../resources/economic-calendar.html">Economic calendar</a></li>
               </ul>
             </div>
           </li>
@@ -88,8 +88,8 @@
             <a class="nav__link" onclick="contact()">Contact Us</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="../contact-us.html">Contact Us</a></li>
-                <li><a href="../faq.html">FAQ</a></li>
+                <li><a href="../../contact-us.html">Contact Us</a></li>
+                <li><a href="../../faq.html">FAQ</a></li>
               </ul>
             </div>
           </li>
@@ -100,16 +100,16 @@
       </nav>
     </div>
   </header>
-  <section class="register">
+  <section class="client">
     <div class="container">
-      <h1 class="register__name">Register Demo</h1>
-      <h2 class="register__subname">Pre-Registration</h2>
-      <form class="register__form" action="" method="post">
-        <div class="register__flex">
+      <h1 class="client__name">Register Real</h1>
+      <h2 class="client__subname">Pre-Registration</h2>
+      <form class="client__form" action="" method="post">
+        <div class="client__flex">
           <input type="text" name="First Name" placeholder="First Name" required>
           <input type="text" name="Last Name" placeholder="Last Name" required>
         </div>
-        <div class="register__flex">
+        <div class="client__flex">
           <select name="Country" tabindex="0" required>
             <option hidden>Country</option>
             <option value="AF">Afghanistan</option>
@@ -364,44 +364,16 @@
           </select>
           <input type="tel" name="Telephone" placeholder="Telephone">
         </div>
-        <div class="register__flex">
+        <div class="client__flex">
           <input type="email" name="Email" placeholder="Email" required>
-          <select name="Currency" tabindex="0" required>
-            <option hidden>Currency</option>
-            <option value="USD">USD</option>
-            <option value="EUR">EUR</option>
-            <option value="GBP">GBP</option>
-          </select>
+          <p class="client__email">Your email will be used only for the purpose of opening your trading account and will not be shared with third parties.</p>
         </div>
-        <div class="register__flex">
-          <select name="Leverage" tabindex="0" required>
-            <option hidden>Leverage</option>
-            <option value="1:10">1:10</option>
-            <option value="1:30">1:30</option>
-            <option value="1:50">1:50</option>
-            <option value="1:100">1:100</option>
-            <option value="1:200">1:200</option>
-            <option value="1:400">1:400</option>
-          </select>
-          <select name="Deposit Amount" tabindex="0" required>
-            <option hidden>Deposit Amount</option>
-            <option value="500">500</option>
-            <option value="1000">1000</option>
-            <option value="5000">5000</option>
-            <option value="10000">10000</option>
-            <option value="25000">25000</option>
-            <option value="50000">50000</option>
-            <option value="1000000">100000</option>
-            <option value="5000000">500000</option>
-          </select>
-        </div>
-        <a class="register__demo" href="../img/pdf/Demo-Account-Disclosure.pdf" target="_blank">Read Demo Disclaimer</a>
-        <div class="register__flex">
+        <div class="client__flex">
           <input type="hidden">
-          <button class="register__next" type="submit" name="Next Step">Register</button>
+          <button class="client__next" type="submit" name="Next Step">Next Step</button>
         </div>
       </form>
-      <p class="register__warning">
+      <p class="client__warning">
         <b>Risk Warning:</b>
         Our products are traded on margin and carry a high level of risk and it is possible to lose all your capital. These products may not be suitable for everyone and you should ensure that you understand the risks involved.
       </p>
@@ -423,7 +395,7 @@
       <div class="footer__flex">
         <ul class="footer__ul">
           <li>
-            <img class="footer__logo" src="../img/logo-w.svg" alt="Forex24 Global">
+            <img class="footer__logo" src="../../img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
             <a class="footer__callme" href="tel:+442080891644">Call us</a>
@@ -438,29 +410,29 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>About</b></li>
           <li><hr></li>
-          <li><a href="../about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
-          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
-          <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
-          <li><a href="../about-us/kids.html">KIDs</a></li>
-          <li><a href="../about-us/careers.html">Careers</a></li>
+          <li><a href="../../about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
+          <li><a href="../../about-us/security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="../../about-us/stp-broker.html">STP Broker</a></li>
+          <li><a href="../../about-us/legal-documents.html">Legal Documents</a></li>
+          <li><a href="../../about-us/kids.html">KIDs</a></li>
+          <li><a href="../../about-us/careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
           <li><hr></li>
-          <li><a href="../trading/account-types.html">Account Types</a></li>
-          <li><a href="../trading/account-comparison.html">Account Comparison</a></li>
-          <li><a href="../trading/product-specification.html">Product Spesification</a></li>
-          <li><a href="../trading/trading-specification.html">Trading Spesification</a></li>
-          <li><a href="../trading/platforms.html">Platforms</a></li>
-          <li><a href="../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-          <li><a href="../trading/announcements.html">Announcements</a></li>
+          <li><a href="../../trading/account-types.html">Account Types</a></li>
+          <li><a href="../../trading/account-comparison.html">Account Comparison</a></li>
+          <li><a href="../../trading/product-specification.html">Product Spesification</a></li>
+          <li><a href="../../trading/trading-specification.html">Trading Spesification</a></li>
+          <li><a href="../../trading/platforms.html">Platforms</a></li>
+          <li><a href="../../trading/funding-and-withdrawal.html">Funding and Withdrawal</a></li>
+          <li><a href="../../trading/announcements.html">Announcements</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a href="../resources/glossary.html">Glossary</a></li>
-          <li><a href="../resources/economic-calendar.html">Economic calendar</a></li>
+          <li><a href="../../resources/glossary.html">Glossary</a></li>
+          <li><a href="../../resources/economic-calendar.html">Economic calendar</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Contacts</b></li>
@@ -476,10 +448,10 @@
         <hr class="footer__hr">
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
-      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
-      <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
+      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
+      <p class="footer__text">The Company is also cliented with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
-  <script src="../js/main.min.js" async></script>
+  <script src="../../js/main.min.js" async></script>
 </body>
 </html>
