--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -33,12 +33,12 @@
             <li>
               <a class="header__open" href="#">Open account</a>
               <ul class="header__accounts  header__accounts--closed">
-                <li><a href="register/real/step-1.html">Real</a></li>
-                <li><a href="register/demo.html">Demo</a></li>
+                <li><a href="client/real/step-1.html">Real</a></li>
+                <li><a href="client/demo.html">Demo</a></li>
                 <li><a href="trading/platforms/zulutrade.html">ZuluTrade</a></li>
               </ul>
             </li>
-            <li><a href="https://client.forex24.com/en/members/login">Log in</a></li>
+            <li><a href="client/login.html">Log in</a></li>
             <li>
               <select class="header__language">
                 <option>En</option>
@@ -119,7 +119,7 @@
         <div class="welcome__content">
           <h1 class="welcome__name">Multi-Platform Trading</h1>
           <p class="welcome__text">MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use. It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
-          <a class="welcome__button" href="register/real/step-1.html">Create account</a>
+          <a class="welcome__button" href="client/real/step-1.html">Create account</a>
         </div>
       </div>
     </div>
@@ -217,7 +217,7 @@
             <li>Multi-platforms</li>
             <li>Fast Deposits and withdrawals</li>
           </ul>
-          <a href="register/real/step-1.html">Create account</a>
+          <a href="client/real/step-1.html">Create account</a>
         </div>
         <div class="account__box">
           <h2>Demo account</h2>
@@ -231,7 +231,7 @@
             <li>Multiplatforms </li>
             <li>No strategy Limitations</li>
           </ul>
-          <a href="register/demo.html">Create account</a>
+          <a href="client/demo.html">Create account</a>
         </div>
       </div>
     </div>
@@ -640,7 +640,7 @@
         <hr class="footer__hr">
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
-      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
+      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
