--- a/forexglobal/trading/platforms.html
+++ b/forexglobal/trading/platforms.html
@@ -31,12 +31,12 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="../register/real/step-1.html">Real</a></li>
-              <li><a href="../register/demo.html">Demo</a></li>
+              <li><a href="../client/real/step-1.html">Real</a></li>
+              <li><a href="../client/demo.html">Demo</a></li>
               <li><a href="../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
           </li>
-          <li><a href="https://client.forex24.com/en/members/login">Log in</a></li>
+          <li><a href="../client/login.html">Log in</a></li>
           <li>
             <select class="header__language">
               <option>En</option>
@@ -143,7 +143,7 @@
           <hr>
           <p>ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders.</p>
           <p>A trader can execute trades manually or allocate a desirable amount to follow top performing traders, therefore diversifying the investment. The trader can also set risk management parameters in advance of any trading activity, in order to shield against any volatile trading strategy.</p>
-          <a class="inner__button  inner__button--start" href="../register/real/step-1.html">Start trading</a>
+          <a class="inner__button  inner__button--start" href="../client/real/step-1.html">Start trading</a>
           <a class="inner__button  inner__button--more" href="platforms/zulutrade.html">Read more</a>
         </div>
         <div class="inner__mockup  inner__mockup--zulu"></div>
@@ -219,7 +219,7 @@
         <hr class="footer__hr">
       <p class="footer__text">© 2018 All rights reserved LYDYA FINANCIAL LTD.</p>
       <p class="footer__text">Located at 155 Ayias Fylaxeos, Ersi Court Suite 202, 3083 Limassol, Cyprus.</p>
-      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF Licence number 300/16 and Company registration number HE334292.</p>
+      <p class="footer__text">Forex24 Global is a brand owned and operated by Lydya Financial Ltd, a Cyprus Investment Firm (CIF) regulated and supervised by the Cyprus Securities and Exchange Commission (CySEC) with CIF <a href="https://www.cysec.gov.cy/en-GB/entities/investment-firms/cypriot/79086/" target="_blank">Licence number 300/16</a> and Company registration number HE334292.</p>
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
