--- a/forexglobal/trading/product-specification.html
+++ b/forexglobal/trading/product-specification.html
@@ -124,8 +124,8 @@
             <li>No hidden fees</li>
           </ul>
         </div>
-        <table class="tab__table">
-        	<tr>
+        <table class="tab__table  tab__table--product">
+        	<tr class="tab__name  tab__name--forex">
         		<th>Symbols</th>
         		<th>Descripion</th>
         		<th>Position Size Per Lot</th>
